--- a/BlogOne/appsettings.json
+++ b/BlogOne/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BlogOneDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BlogOne;Integrated Security=True;" 
+  }
 }
